[project]
name = "mermaid-inference-workspace"
version = "0"
requires-python = ">=3.12"

# Virtual workspace root: an umbrella that ties the member packages together for
# development, but is never itself built or published. The shipped packages live
# under packages/ (mermaid-inference-contract, pyspacer-function).
[tool.uv]
package = false

# Shared dev tooling installed into the workspace venv, so `uv run pytest`
# resolves from the repo root (and from any member dir).
[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
# Bare `uv run pytest` at the repo root stays scoped to the pure-pydantic
# contract (a safe, torch-free default). The torch-heavy function suite must run
# in its own process — torch cannot initialise twice per process — so never
# collect both trees in one invocation. Run each package's tests separately
# (see README "Development").
testpaths = ["packages/mermaid-inference-contract/tests"]
