[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspacer-function"
version = "0.1.0"
description = "pyspacer classifier inference function (Lambda compute lane) + local-dev harness"
requires-python = ">=3.12"
dependencies = [
    "mermaid-inference-contract",
    "mermaid-classifier[inference]",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv.sources]
mermaid-inference-contract = { workspace = true }
mermaid-classifier = { path = "../../mermaid-classifier", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pyspacer_function"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
